<resources>
    <string name="app_name">Optometry</string>
    <string name="drawer_open">打开导航</string>
    <string name="drawer_close">关闭导航</string>
    <string name="nav_workbench">验光台</string>
    <string name="nav_patient">被测者</string>
    <string name="nav_report">报告</string>
    <string name="nav_program">程序</string>
    <string name="nav_device">设备</string>
    <string name="nav_settings">设置</string>
    <string name="action_open_new_workbench">新版工作台</string>
    <string name="new_workbench_title">新版验光工作台</string>
    <string name="new_workbench_overline">Tablet Landscape Preview</string>
    <string name="action_patient">被测者</string>
    <string name="action_help">帮助</string>
    <string name="action_in">IN 置入</string>
    <string name="action_shift">SHIFT 未开</string>
    <string name="action_report">报告</string>
    <string name="action_device">设备</string>
    <string name="section_measurement">参数控制台</string>
    <string name="section_program">程序工作流</string>
    <string name="section_tools">底部检查工具</string>
    <string name="section_chart">视标与显示</string>
    <string name="eye_right">右眼</string>
    <string name="eye_left">左眼</string>
    <string name="eye_both">双眼</string>
    <string name="lens_right">显右</string>
    <string name="lens_left">显左</string>
    <string name="lens_both">显双</string>
    <string name="adjust_minus">减</string>
    <string name="adjust_plus">加</string>
    <string name="shift_minus">SHIFT-</string>
    <string name="shift_plus">SHIFT+</string>
    <string name="snapshot_far">远用镜片</string>
    <string name="snapshot_near">近用镜片</string>
    <string name="snapshot_final">最终处方</string>
    <string name="prev_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="add_custom_step">追加步骤</string>
    <string name="chart_mode_horizontal">横排</string>
    <string name="chart_mode_vertical">竖排</string>
    <string name="chart_mode_single">单个</string>
</resources>
